--- a/styles/components/business-tree.less
+++ b/styles/components/business-tree.less
@@ -29,9 +29,17 @@
           text-align: center;
           height: 100%;
           color: #b7beca;
-          
+          &-load {
+            width: 28px;
+            height: 28px;
+            margin-left: -8px;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            animation: circle infinite 1.2s linear;
+          }
         }
-        .iconfont {
+        .ivu-icon {
           cursor: pointer;
         }
       }
